[workspace]
members = [
    "crates/warp-demo",
    "crates/wasmedge-demo",
    "crates/wasmtime-demo",
    "crates/pyo3-demo",
    "crates/actix-web-demo",
    "crates/rust-bert-demo",
    "crates/raft-demo",
    "crates/crossbeam-demo",
    "crates/arrow-demo",
    "crates/admission-controller-demo",
    "crates/wasm-wasi-demo",
    "crates/irmin-rs-demo",
]

[workspace.dependencies]
anyhow = "1.0.44"

