[workspace]
members = [
    "crates/warp-demo",
    "crates/wasmedge-demo",
    "crates/pyo3-demo",
    "crates/actix-web-demo",
    "crates/rust-bert-demo",
    "crates/raft-demo",
    "crates/crossbeam-demo",
    "crates/arrow-demo",
    "crates/wasm-wasi-demo",
    "crates/irmin-rs-demo",
    "crates/basic-demo",
    "crates/yew-app-demo",
    "crates/axum-demo",
    "crates/lance-demo",
    "crates/rayon-demo",
]

[workspace.dependencies]
anyhow = "1"

