[package]
name = "admission-controller-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.76.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
