[package]
name = "lance-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os = "macos")'.dependencies]
lance = { features = ["blas"]}
arrow = { version = "32", features = ["prettyprint", "csv"] }
arrow-array = { version = "32" }
tempfile = {}



