[package]
name = "opendal-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opendal = { version = "0.30",features = ["layers-all"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "time", "net", "process", "macros"] }

