[package]
name = "wasmedge-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge-sdk = "0.4.0"
wasmedge-sys = "0.9.0"
wasmedge-types = "0.2.1"
anyhow = { workspace = true }

[features]
aot = []
default = ["aot"]